--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+/* HOME */
 body{
    background-color:rgb(235, 230, 230);
-   
 }
 
 .logo {
@@ -76,4 +81,45 @@ position: absolute;
 .marcas {
     width: 30%;
 }
-    
+/* PREGUNTAS FRECUENTES */
+.preguntas{
+    margin-top: 10px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.preguntas ul {
+    margin-left:20px ;
+    font-size: 20px;
+
+}
+.preguntas h1{
+font-size: 45px;
+font-weight: bold;
+}
+.preguntas h3{
+    font-size: 25px;
+    font-weight: bold;
+}
+.preguntas p{
+    font-size: 20px;
+}
+.preguntas form h3{
+    font-size: 30px;
+    font-weight: bold;
+}
+.preguntas form{
+    font-size: 25px;
+}
+/* FALTA PONERLE COLOR 
+.btn-primary{
+    background-color: ;
+    color: black;
+} */
+.btn-info{
+    background-color:red !important;
+    border-color:red  !important ;
+    font-weight: bold;
+    font-size: 200;
+    height: 70px;
+    width: 150px;
+  }
