--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 }
 /* HOME */
+h6{
+    color: white;
+}
 body{
    background-color:rgb(235, 230, 230);
 }
@@ -73,14 +76,12 @@ h1 {
 position: absolute;
     top: 0px;
     z-index: 50;
-    width: 20%;
-
-    
+    width: 20%;   
 }
-
 .marcas {
     width: 30%;
 }
+
 /* PREGUNTAS FRECUENTES */
 .preguntas{
     margin-top: 10px;
@@ -110,16 +111,41 @@ font-weight: bold;
 .preguntas form{
     font-size: 25px;
 }
-/* FALTA PONERLE COLOR 
-.btn-primary{
-    background-color: ;
-    color: black;
-} */
+
 .btn-info{
-    background-color:red !important;
-    border-color:red  !important ;
+    background-color:#dc3545!important;
+    border-color:#dc3545 !important ;
     font-weight: bold;
-    font-size: 200;
     height: 70px;
     width: 150px;
   }
+  /* CONTACTO */
+  .contacto{
+    margin-top: 10px;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  .contacto img{
+      text-align: center;
+      height: 450px;
+      width: 80%;
+      margin-left: 10%;
+      margin-right: 10%;
+  }
+  .contacto ul {
+    margin-left:20px ;
+    font-size: 20px;
+
+}
+.contacto h1{
+font-size: 45px;
+font-weight: bold;
+}
+.contacto h2{
+    font-size: 35px;
+    font-weight: bold;
+}
+.contacto p{
+    font-size: 25px;
+}
+
