--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,19 @@ height: 35px;
     
 
 }
-
+ .row h2 {
+     text-align: center;
+ }
+.row p {
+    text-align: center;
+}
+.col-md-5 col-lg-3 img {
+  margin: 0 auto;
+}
+.row {
+    padding-left: 10%;
+    padding-right: 10%;
+}
 /* PREGUNTAS FRECUENTES */
 
 .preguntasreg {
