--- a/css/styles.css
+++ b/css/styles.css
@@ -377,3 +377,8 @@ font-weight: bold;
     margin-bottom: 25px;
     text-align: center;
 }
+
+.boton1 a {
+    color: white !important;
+    text-decoration: none;
+}
