--- a/css/styles.css
+++ b/css/styles.css
@@ -382,3 +382,7 @@ font-weight: bold;
     color: white !important;
     text-decoration: none;
 }
+ /* PERFIL* /
+ .botonSalir{
+     float:right;
+ }
