--- a/css/styles.css
+++ b/css/styles.css
@@ -230,7 +230,7 @@ font-weight: bold;
       padding: 30px;
       margin-right: 30px;
       */
-      padding: 60px;
+      padding: 15px;
     
   }
 
@@ -385,4 +385,8 @@ font-weight: bold;
  /* PERFIL* /
  .botonSalir{
      float:right;
+ }
+ /* ERRORES */
+ .errores{
+     text-align: center;
  }
