--- a/css/styles.css
+++ b/css/styles.css
@@ -397,3 +397,18 @@ font-weight: bold;
     padding-left: 50px;
 }
 
+/* MI PERFIL  */
+.miperfil {
+    text-align: center;
+}
+.fotoperfil{
+    margin-top: 15px;
+    margin-bottom: 30px;
+    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+}
+/* ERRORES */
+.errores{
+    text-align: center;
+}
