--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,20 @@ body{
     
 }
 
+.collapse navbar-collapse .navbar-nav .nav-item ul li .nav-link {
+    padding-right: 50px;
+    margin: 50px;
+}
+
+.navbar-nav ul li .fas fa-shopping-cart{
+    color: black;
+}
+
 .barra .navbar .collapse navbar-collapse .navbar-nav{
     width:100% ;
-    display: block
+    display: block;
+    
+    
     
     
 }
@@ -41,6 +52,7 @@ body{
 .navbar-nav li .nav-item active {
    
     color: white;
+    
 }
 
 .productos {
@@ -113,6 +125,14 @@ height: 35px;
     border-color: #00ab4e!important;
     margin-left: 4px;
     height: 35px;
+}
+
+li .fa-shopping-cart:before{
+    color: black !important;
+}
+
+.fa-shopping-cart:before {
+    margin: 50px;
 }
 
 a:hover {
