--- a/css/styles.css
+++ b/css/styles.css
@@ -437,3 +437,11 @@ font-weight: bold;
    font-size: 20px;
    margin-top: 12px;
 }
+.abajo {
+    
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+ 
+  }
